Se agrego una carpeta imagen con dos imagenes y se actualizo el body del html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       text-align: center;
       padding: 20px;
     }
+    
+    body{
+      background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.2)),
+      url("/img/julien-goettelmann-nMRE6uR-eP4-unsplash.jpg");
+      background-size: cover;    
+      background-position: center; 
+      background-repeat: no-repeat;
+    }
 
     header h1 {
       font-size: 3rem;
