feat: cambio texto desde main

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     <div>
       <h1>AutoMax</h1>
       <p>Encuentra el auto perfecto para tu estilo de vida</p>
+      <p>Saludo desde el main</p>
       <a href="#autos" class="btn">Ver autos</a>
     </div>
   </header>
